bce matches tensorflow outputs

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,59 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from mlp import DenseLayer, MLP\n",
-    "from ops import ReLU, MeanSquaredError\n",
+    "from ops import ReLU, MeanSquaredError, BinaryCrossEntropy, Sigmoid\n",
+    "from tensorflow.keras.losses import binary_crossentropy\n",
     "\n",
     "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs:\n",
+      "y_true: [0 1 0 0]\n",
+      "y_pred_logits: [-18.6    0.51   2.94 -12.8 ]\n",
+      "y_pred_proba: [8.35839003e-09 6.24806474e-01 9.49788727e-01 2.76076495e-06]\n",
+      "\n",
+      "My implementation:\n",
+      "bce(from_logits=False): 0.8654579497810978\n",
+      "bce(from_logits=True): 0.8654579497810978\n",
+      "\n",
+      "Tensorflow:\n",
+      "0.8654573847833843\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validate binary cross entropy\n",
+    "\n",
+    "sigmoid = Sigmoid()\n",
+    "\n",
+    "y_true = np.array([0, 1, 0, 0])\n",
+    "y_pred_logits = np.array([-18.6, 0.51, 2.94, -12.8])\n",
+    "y_pred_proba = sigmoid(y_pred_logits)\n",
+    "\n",
+    "print('Inputs:')\n",
+    "print('y_true:', y_true)\n",
+    "print('y_pred_logits:', y_pred_logits)\n",
+    "print('y_pred_proba:', y_pred_proba)\n",
+    "\n",
+    "bce = BinaryCrossEntropy()\n",
+    "\n",
+    "print()\n",
+    "print('My implementation:')\n",
+    "print('bce(from_logits=False):', bce((y_true, y_pred_proba), from_logits=False))\n",
+    "print('bce(from_logits=True):', bce((y_true, y_pred_logits), from_logits=True))\n",
+    "\n",
+    "print()\n",
+    "print('Tensorflow:')\n",
+    "print(binary_crossentropy(y_true, y_pred_proba).numpy())"
    ]
   },
   {
