fixed bce derivative but dubious results.... tf.GradientTape() dC/da doesnt match

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Tuple, Optional, Union\n",
     "\n",
+    "from tensorflow.keras.losses import binary_crossentropy\n",
+    "import tensorflow as tf\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from mlp import DenseLayer, MLP\n",
     "from ops import ReLU, MeanSquaredError, BinaryCrossEntropy, Sigmoid\n",
-    "from tensorflow.keras.losses import binary_crossentropy\n",
     "\n",
     "np.random.seed(0)"
    ]
