mse gradient and tensorflow gradient tape arent the same.... how to account for this... diff between reverse differentiation and tf auto dif...

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Tuple, Optional, Union\n",
     "\n",
-    "from tensorflow.keras.losses import binary_crossentropy\n",
+    "from tensorflow.keras.losses import binary_crossentropy, mean_squared_error\n",
     "import tensorflow as tf\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf gradient tape: [0.00666667 0.22666667 0.01333333]\n",
+      "mse.gradient: [0.02 0.68 0.04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate mse object\n",
+    "mse = MeanSquaredError()\n",
+    "\n",
+    "# Validate MSE grad\n",
+    "a_L_np = np.array([0.12, 0.35, 0.61])\n",
+    "y_true_np = np.array([0.11, 0.01, 0.59])\n",
+    "a_L_tf = tf.Variable(a_L_np)\n",
+    "y_true_tf = tf.constant(y_true_np)\n",
+    "\n",
+    "# tf gradient context\n",
+    "with tf.GradientTape() as tape:\n",
+    "    C = mean_squared_error(y_true=y_true_tf, y_pred=a_L_tf)\n",
+    "\n",
+    "dC_daL = tape.gradient(C, a_L_tf)\n",
+    "print('tf gradient tape:', dC_daL.numpy())\n",
+    "\n",
+    "# My implementation\n",
+    "dC_daL_np = mse.gradient((y_true_np, a_L_np))\n",
+    "print('mse.gradient:', dC_daL_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,12 +93,13 @@
     "print('y_pred_logits:', y_pred_logits)\n",
     "print('y_pred_proba:', y_pred_proba)\n",
     "\n",
+    "bce_fl = BinaryCrossEntropy(from_logits=True)\n",
     "bce = BinaryCrossEntropy()\n",
     "\n",
     "print()\n",
     "print('My implementation:')\n",
-    "print('bce(from_logits=False):', bce((y_true, y_pred_proba), from_logits=False))\n",
-    "print('bce(from_logits=True):', bce((y_true, y_pred_logits), from_logits=True))\n",
+    "print('bce(from_logits=False):', bce((y_true, y_pred_proba)))\n",
+    "print('bce(from_logits=True):', bce_fl((y_true, y_pred_logits)))\n",
     "\n",
     "print()\n",
     "print('Tensorflow:')\n",
