MSE gradient matches... try binary cross entropy now...

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0.38421378 0.213858  ], shape=(2,), dtype=float64)\n",
+      "[0.38421378 0.213858  ]\n",
+      "\n",
+      "tf.Tensor(\n",
+      "[[0.8766 0.    ]\n",
+      " [0.654  0.    ]], shape=(2, 2), dtype=float64)\n",
+      "tf.Tensor(\n",
+      "[[0.8766 0.    ]\n",
+      " [0.654  0.    ]], shape=(2, 2), dtype=float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_true = tf.constant(np.array([[0.1234, 1.], [0.346, 0.]]))\n",
+    "y_pred = tf.Variable(np.array([[1., 1.], [1., 0.]]))\n",
+    "\n",
+    "mse = MeanSquaredError()\n",
+    "print(mean_squared_error(y_true, y_pred))\n",
+    "print(mse((y_true, y_pred), axis=-1))\n",
+    "print()\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    C = mean_squared_error(y_true, y_pred)\n",
+    "\n",
+    "print(tape.gradient(C, y_pred))\n",
+    "print(mse.gradient((y_true, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([ 6. 10.], shape=(2,), dtype=float32)\n",
+      "[ 6. 10.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tf gradient stock example\n",
+    "# https://www.tensorflow.org/api_docs/python/tf/GradientTape\n",
+    "# Here goes the neural network weights as tf.Variable\n",
+    "x = tf.Variable([3.0, 5])\n",
+    "\n",
+    "def dydx(var):\n",
+    "    \"\"\"y = x^{2}, dydx = 2x\"\"\"\n",
+    "\n",
+    "    return 2 * var\n",
+    "\n",
+    "# TensorFlow operations executed within the context of\n",
+    "# a GradientTape are  recorded for differentiation \n",
+    "with tf.GradientTape() as tape:\n",
+    "  # Doing the computation in the context of the gradient tape\n",
+    "  # For example computing loss\n",
+    "  y = x ** 2 \n",
+    "\n",
+    "# Getting the gradient of network weights w.r.t. loss\n",
+    "dy_dx = tape.gradient(y, x) \n",
+    "my_dy_dx = dydx(x.numpy())\n",
+    "print(dy_dx)  # Returns 6\n",
+    "print(my_dy_dx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
