gradient is correctly computed now for MSE, still had to consider the total number of dimensions (i.e., neurons) in the denominator

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -22,28 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([0.38421378 0.213858  ], shape=(2,), dtype=float64)\n",
-      "[0.38421378 0.213858  ]\n",
+      "(2, 3)\n",
+      "tf.Tensor([5043.25614252 5043.142572  ], shape=(2,), dtype=float64)\n",
+      "[5043.25614252 5043.142572  ]\n",
       "\n",
       "tf.Tensor(\n",
-      "[[0.8766 0.    ]\n",
-      " [0.654  0.    ]], shape=(2, 2), dtype=float64)\n",
+      "[[  0.5844   0.     -82.    ]\n",
+      " [  0.436    0.     -82.    ]], shape=(2, 3), dtype=float64)\n",
       "tf.Tensor(\n",
-      "[[0.8766 0.    ]\n",
-      " [0.654  0.    ]], shape=(2, 2), dtype=float64)\n"
+      "[[  0.5844   0.     -82.    ]\n",
+      " [  0.436    0.     -82.    ]], shape=(2, 3), dtype=float64)\n"
      ]
     }
    ],
    "source": [
-    "y_true = tf.constant(np.array([[0.1234, 1.], [0.346, 0.]]))\n",
-    "y_pred = tf.Variable(np.array([[1., 1.], [1., 0.]]))\n",
+    "y_true = tf.constant(np.array([[0.1234, 1., 123], [0.346, 0., 123]]))\n",
+    "y_pred = tf.Variable(np.array([[1., 1., 0], [1., 0., 0]]))\n",
+    "\n",
+    "print(y_true.shape)\n",
     "\n",
     "mse = MeanSquaredError()\n",
     "print(mean_squared_error(y_true, y_pred))\n",
