my derivative matches that of ml mastery but not tf gradient tape...

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -45,7 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deriv_bce(y, y_hat):\n",
+    "    if y == 1:\n",
+    "        return -1 / y_hat\n",
+    "    else:\n",
+    "        return 1 / (1 - y_hat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +71,8 @@
       "\n",
       "-- BCE --\n",
       "tf gradient tape: [ 0.         -0.40012383  4.97895166  0.25000067]\n",
-      "bce.gradient: [ 1.00000001 -1.60049558 19.91584631  1.00000276]\n"
+      "bce.gradient: [ 1.00000001 -1.60049558 19.91584631  1.00000276]\n",
+      "ml master deriv bce: [1.00000000835839, -1.600495578812266, 19.915846312255084, 1.000002760772572]\n"
      ]
     }
    ],
@@ -212,6 +226,7 @@
     "print('tf gradient tape:', dC_dProbaActivation.numpy())\n",
     "dC_dProbaActivationMine = bce.gradient((y_true, y_pred_proba))\n",
     "print('bce.gradient:', dC_dProbaActivationMine.numpy())\n",
+    "print('ml master deriv bce:', [deriv_bce(y_true[sample].numpy(), y_pred_proba[sample].numpy()) for sample in range(y_true.shape[0])])\n",
     "\n",
     "#### Outputs ####\n",
     "# -- MSE -- \n",
