changed demo and mlp for bce and will not implement optimized version

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MeanSquaredError'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def deriv_bce(y, y_hat):\n",
     "    if y == 1:\n",
     "        return -1 / y_hat\n",
     "    else:\n",
-    "        return 1 / (1 - y_hat)"
+    "        return 1 / (1 - y_hat)\n",
+    "\n",
+    "MeanSquaredError().__class__.__name__"
    ]
   },
   {
