--- a/ch2_nn_math/tex/report.tex
+++ b/ch2_nn_math/tex/report.tex
@@ -756,9 +756,7 @@ refers to the number of neurons in the previous layer.
 
 \subsection{Regression Tasks}
 
-\subsection{Classification Tasks}
-
-\subsubsection{Binary}
+\subsection{Binary Classification Tasks}
 
 A binary classification task takes some input $x$ and produces a prediction
 $\hat{y}$ that is the probability (or logit, aka unscaled log probability) that
@@ -802,7 +800,7 @@ activation function and 32 neurons; an output layer with sigmoid activation func
 and 1 neuron; the BCE cost function; batch size of 32; trained for 8 epochs;
 update parameters with stochastic gradient descent; and learning rate of 0.001.
 
-\subsubsection{Multi-Class}
+\section{Conclusions}
 
 \pagebreak
 \printbibliography
