--- a/ch2_nn_math/tex/sources.bib
+++ b/ch2_nn_math/tex/sources.bib
@@ -105,3 +105,12 @@
   publisher    = {NumPy},
   year         = {2021}
 }
+
+ @misc{Khan2020,
+  title     = {How do tensorflow and Keras implement binary classification and the binary cross-entropy function?},
+  url       = {https://rafayak.medium.com/how-do-tensorflow-and-keras-implement-binary-classification-and-the-binary-cross-entropy-function-e9413826da7},
+  publisher = {Medium},
+  author    = {Khan, Rafay},
+  year      = {2020},
+  month     = {Dec}
+} 
