derivative does not match tf gradient...

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -38,15 +38,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-15\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ -2,   6,   9, -25])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(-5  * 3)"
+    "# Using numpy where\n",
+    "a = np.array([-1, 2, 3, -5])\n",
+    "\n",
+    "b = np.array([2, 3, 4, 5])\n",
+    "\n",
+    "np.where(a < 0, a * b, a * 3)"
    ]
   },
   {
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,6 +296,37 @@
     "\n",
     "print('tf:', from_logits_cce_tf_results.numpy())\n",
     "print('np:', from_logits_cce_np_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf: [ 2.08959751e-09 -9.37983814e-02  2.37447182e-01  6.90191238e-07]\n",
+      "np: [0 0 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BCE from logits gradient\n",
+    "from_logits_cce = SigmoidCrossEntropyWithLogits()\n",
+    "y_true = tf.constant(np.array([0, 1, 0, 0]))\n",
+    "y_pred_logits = tf.Variable(np.array([-18.6, 0.51, 2.94, -12.8]))\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    from_logits_cce_tf_results = binary_crossentropy(\n",
+    "        y_true, y_pred_logits, from_logits=True)\n",
+    "\n",
+    "from_logits_cce_tf_grad = tape.gradient(from_logits_cce_tf_results, y_pred_logits)\n",
+    "from_logits_cce_np_grad = from_logits_cce.gradient((y_true, y_pred_logits))\n",
+    "\n",
+    "print('tf:', from_logits_cce_tf_grad.numpy())\n",
+    "print('np:', from_logits_cce_np_grad)"
    ]
   },
   {
