--- a/testing.ipynb
+++ b/testing.ipynb
@@ -34,6 +34,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'zip'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(zip()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
