--- a/testing.ipynb
+++ b/testing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +45,31 @@
     "\n",
     "print(np.random.normal(size=(1,)))\n",
     "print(tf.random.normal(shape=(1,)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': [1, 2, 3, 7, 3, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "nested_dict = dict()\n",
+    "nested_dict['model1'] = {'train': [1, 2, 3]}\n",
+    "nested_dict['model2'] = {'train': [3, 4, 5]}\n",
+    "\n",
+    "kth_fold_model_history = {'train': [7, 3, 5]}\n",
+    "for k, v in kth_fold_model_history.items():\n",
+    "    nested_dict['model1'][k] += (v)\n",
+    "\n",
+    "print(nested_dict['model1'])"
    ]
   },
   {
