--- a/testing.ipynb
+++ b/testing.ipynb
@@ -49,23 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train': [1, 2, 3, 7, 3, 5]}\n"
+      "[{'train': [1, 2, 3], 'val': [1, 3, 4]}, {'train': [3, 4, 5]}]\n",
+      "{'train': [1, 2, 3, 7, 3, 5], 'val': [1, 3, 4, 6, 3, 2]}\n"
      ]
     }
    ],
    "source": [
     "nested_dict = dict()\n",
-    "nested_dict['model1'] = {'train': [1, 2, 3]}\n",
+    "nested_dict['model1'] = {'train': [1, 2, 3], 'val': [1, 3, 4, ]}\n",
     "nested_dict['model2'] = {'train': [3, 4, 5]}\n",
     "\n",
-    "kth_fold_model_history = {'train': [7, 3, 5]}\n",
+    "print(list(nested_dict.values()))\n",
+    "\n",
+    "kth_fold_model_history = {'train': [7, 3, 5], 'val': [6, 3, 2,]}\n",
     "for k, v in kth_fold_model_history.items():\n",
     "    nested_dict['model1'][k] += (v)\n",
     "\n",
