--- a/testing.ipynb
+++ b/testing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
     "from tensorflow.keras.losses import binary_crossentropy, mean_squared_error\n",
     "import tensorflow as tf\n",
     "\n",
-    "from stats import plot_train_val_loss\n",
+    "from stats import plot_train_val_loss, MultiModelHistory\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -45,6 +45,103 @@
     "\n",
     "print(np.random.normal(size=(1,)))\n",
     "print(tf.random.normal(shape=(1,)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "7/7 [==============================] - 0s 20ms/step - loss: 1.3944 - val_loss: 1.6465\n",
+      "Epoch 2/5\n",
+      "7/7 [==============================] - 0s 5ms/step - loss: 1.3031 - val_loss: 1.5942\n",
+      "Epoch 3/5\n",
+      "7/7 [==============================] - 0s 5ms/step - loss: 1.2299 - val_loss: 1.5378\n",
+      "Epoch 4/5\n",
+      "7/7 [==============================] - 0s 5ms/step - loss: 1.1593 - val_loss: 1.5045\n",
+      "Epoch 5/5\n",
+      "7/7 [==============================] - 0s 5ms/step - loss: 1.1205 - val_loss: 1.4855\n",
+      "Epoch 1/5 -- Loss: 0.995 -- Validation Loss: 1.131\n",
+      "Epoch 2/5 -- Loss: 0.994 -- Validation Loss: 0.957\n",
+      "Epoch 3/5 -- Loss: 0.993 -- Validation Loss: 1.214\n",
+      "Epoch 4/5 -- Loss: 0.992 -- Validation Loss: 0.712\n",
+      "Epoch 5/5 -- Loss: 0.991 -- Validation Loss: 0.98\n",
+      "['my_model', 'ref_model']\n",
+      "['loss', 'val_loss']\n",
+      "[defaultdict(<class 'list'>, {'loss': [0.995088712291705, 0.9939199689831675, 0.9928225125943166, 0.9917890645891693, 0.9908133952141073], 'val_loss': [1.1308552353682026, 0.9566528119552512, 1.2139961990237655, 0.7121656233867669, 0.9798410437738047]}), {'loss': [1.3944320678710938, 1.303109884262085, 1.2298996448516846, 1.1592942476272583, 1.1205456256866455], 'val_loss': [1.646530032157898, 1.5941754579544067, 1.5377655029296875, 1.5044548511505127, 1.4854944944381714]}]\n",
+      "\n",
+      "defaultdict(<class 'list'>, {'loss': [0.995088712291705, 0.9939199689831675, 0.9928225125943166, 0.9917890645891693, 0.9908133952141073], 'val_loss': [1.1308552353682026, 0.9566528119552512, 1.2139961990237655, 0.7121656233867669, 0.9798410437738047]})\n",
+      "\n",
+      "{'loss': [1.3944320678710938, 1.303109884262085, 1.2298996448516846, 1.1592942476272583, 1.1205456256866455], 'val_loss': [1.646530032157898, 1.5941754579544067, 1.5377655029296875, 1.5044548511505127, 1.4854944944381714]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multi model dict building\n",
+    "\n",
+    "# Example tensorflow model\n",
+    "samples = 64\n",
+    "batch_size = 8\n",
+    "epochs = 5\n",
+    "hidden = 2\n",
+    "targets = 3\n",
+    "num_layers = 1\n",
+    "x = np.random.normal(size=(samples, hidden))\n",
+    "y = np.random.normal(size=(samples, 1))\n",
+    "\n",
+    "model = tf.keras.Sequential()\n",
+    "for lyr in range(num_layers):\n",
+    "    model.add(tf.keras.layers.Dense(units=hidden, activation='relu'))\n",
+    "model.add(tf.keras.layers.Dense(units=targets, name='predictions'))\n",
+    "\n",
+    "model.compile(loss='mse', optimizer='sgd')\n",
+    "\n",
+    "history = model.fit(x, y, epochs=epochs, batch_size=batch_size, validation_split=0.2, verbose=1)\n",
+    "\n",
+    "# Build my model\n",
+    "my_model = MLP(\n",
+    "    input_dims=x.shape[-1],\n",
+    "    hidden_units=hidden,\n",
+    "    targets=y.shape[-1],\n",
+    "    learning_rate=0.01,\n",
+    "    loss_function=MeanSquaredError(),\n",
+    "    l_layers=num_layers)\n",
+    "\n",
+    "# Train my model\n",
+    "my_history = my_model.fit(x=x, y=y, batch_size=batch_size, epochs=epochs,)\n",
+    "\n",
+    "# My multimodel history dictionary\n",
+    "mmh_dict = MultiModelHistory()\n",
+    "\n",
+    "mmh_dict.append_model_history(\n",
+    "    model_history=my_history,\n",
+    "    model_key='my_model')\n",
+    "\n",
+    "mmh_dict.append_model_history(\n",
+    "    model_history=history.history,\n",
+    "    model_key='ref_model')\n",
+    "\n",
+    "print(mmh_dict.model_keys)\n",
+    "print(mmh_dict.metric_keys)\n",
+    "print(mmh_dict.model_histories)\n",
+    "print()\n",
+    "print(mmh_dict.model_histories[0])\n",
+    "print()\n",
+    "print(mmh_dict.model_histories[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confidence interval building"
    ]
   },
   {
